# PyWappalyzer

./: .gitignore  README.md  README_RU.md  main.py  pyproject.toml
src/pywappalyzer/: __init__.py  analyzer.py  download_data.py  handler.py  har_wrapper.py  loaders.py  wappalyzer.py
src/pywappalyzer/schemas/: base.py  detection.py  fingerprints.py  har.py  patterns.py  taxonomy.py
