[project]
name = "pywappalyzer"
version = "1.0"
description = "Web technology fingerprinting via HAR analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.50",
    "platformdirs>=4.10.0",
    "pydantic>=2.9.1",
    "regex>=2026.5.9",
    "selectolax>=0.4.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pywappalyzer"]
